<resources>
    <string name="app_name">place1</string>
    <string name="input_id">아이디를 입력하세요</string>
    <string name="input_password">패스워드를 입력하세요</string>
    <string name="input_passwordcheck">패스워드를 확인하세요</string>
    <string name="input_name">성명을 입력하세요</string>
    <string name="input_number">휴대폰번호를 입력하세요</string>
    <string name="input_birthdate">생년월일을 입력하세요</string>
    <string name="btn_submit">가입하기</string>

</resources>
